fixed the content going off screen

--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -3,7 +3,6 @@
     position: relative;
     left: 10%;
     top: 50%;
-    transform: translateY(-50%);
     width: 80%;
     max-height: 100%;
     .about-me{
